objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Product_Code_Bookmark__c</fullName>
        <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(ProductCode, &quot; &quot;, &quot;_&quot;),&quot;.&quot;,&quot;_&quot;),&quot;-&quot;,&quot;_&quot;)</formula>
        <label>Product Code Bookmark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Transaction_Summaries__c</fullName>
        <label>Product Transaction Summaries</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Product_SF_ID_18__c</fullName>
        <description>Salesforce ID of Record.
18 Digits.</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>Salesforce ID of Record.
18 Digits.</inlineHelpText>
        <label>Product SF ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Product_category__c</fullName>
        <inlineHelpText>Main category. 
Like SHAFTALIGN, OPTALIGN etc.</inlineHelpText>
        <label>Product category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>